[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["quailwwk <quailwwk@126.com>"]

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"
numpy = "^1.18"
hmmlearn = "^0.2.3"
joblib = "^0.14.1"
sklearn = "^0.0.0"
scikit-learn = "^0.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
